AC_INIT([eina], 0.7.0, xuzo@cuarentaydos.com)
AM_INIT_AUTOMAKE([eina], [0.7.0])
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

dnl aclocal flags
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_ISC_POSIX
AC_PROG_CC
AC_HEADER_STDC
dnl AC_PROG_INTLTOOL
IT_PROG_INTLTOOL([0.35.0])
AM_PROG_LIBTOOL

EINA_API_VERSION="0.7"
EINA_VERSION="$EINA_API_VERSION.0"
AC_SUBST(EINA_VERSION)
AC_SUBST(EINA_API_VERSION)

AC_PATH_PROG(PKG_CONFIG, pkg-config)
GLIB_GENMARSHAL=`$PKG_CONFIG --variable=glib_genmarshal glib-2.0`
AC_SUBST(GLIB_GENMARSHAL)

AC_PATH_PROG(GTK_BUILDER_CONVERT, gtk-builder-convert)
AC_SUBST(GTK_BUILDER_CONVERT)

#*******************************************************************************
# Internationalization
#*******************************************************************************
ALL_LINGUAS="ca es"
GETTEXT_PACKAGE=eina
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])
AM_GLIB_GNU_GETTEXT

# Some flags
AC_ARG_ENABLE(release-build, [  --enable-release-build         build in release mode], release_build=yes, release_build=no)
if test x$release_build = 'xyes'; then
	CXXFLAGS="-O2"
	CFLAGS="-O2"
	BUILD_MODE_CFLAGS="-DG_DISABLE_CAST_CHECKS -O2"
else
	CXXFLAGS="-O02"
	CFLAGS="-O0"
	BUILD_MODE_CFLAGS="-g -O0"
fi

GLIB_VERSION="2.16"
GTK_VERSION="2.12"
GSTREAMER_VERSION="0.10"
pkg_modules="\
	glib-2.0 >= $GLIB_VERSION,      \
	gmodule-2.0 >= $GLIB_VERSION,   \
	gio-2.0 >= $GLIB_VERSION,       \
	gtk+-2.0 >= $GTK_VERSION,
	gstreamer-0.10 >= $GSTREAMER_VERSION"
PKG_CHECK_MODULES(PACKAGE, $pkg_modules)
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)
PACKAGE_CFLAGS="\
	$PACKAGE_CFLAGS \
	-DG_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED \
	-DGEL_DISABLE_DEPRECATED -DGEL_UI_DISABLE_DEPRECATED \
	-Wall -Werror -std=c99 $BUILD_MODE_CFLAGS"
AC_SUBST(GTK_VERSION)
AC_SUBST(GSTREAMER_VERSION)

PACKAGE_RELEASE_DATE="`date '+%a, %d %b %Y %H:%m:%S %z'`"
AC_SUBST(PACKAGE_RELEASE_DATE)

dnl curl (eina-cover)
AC_PATH_PROG(CURL_CONFIG, curl-config)
if test -z "$CURL_CONFIG"; then
	HAVE_CURL="no"
	echo "Error: libcurl headers not found"
	exit 1
else
	CURL_CXXFLAGS="`$CURL_CONFIG --cflags`"
	CURL_LIBS="`$CURL_CONFIG --libs`"
	HAVE_CURL="yes"
fi
AC_SUBST(CURL_CXXFLAGS)
AC_SUBST(CURL_LIBS)

dnl
dnl Plugins
dnl

dnl sqlite3 (adb)
sqlite3_modules="sqlite3 >= 3.2"
PKG_CHECK_MODULES(SQLITE3, $sqlite3_modules,
	[
		AC_SUBST(SQLITE3_CFLAGS)
		AC_SUBST(SQLITE3_LIBS)
		HAVE_SQLITE3=yes
	],
	[
		HAVE_SQLITE3=no
	]
	)
AM_CONDITIONAL(USE_ADB, test x"$HAVE_SQLITE3" = "xyes")

dnl libnotify (notify)
libnotify_modules="libnotify >= 0.4.0"
PKG_CHECK_MODULES(LIBNOTIFY, $libnotify_modules,
     [
        AC_SUBST(LIBNOTIFY_CFLAGS)
        AC_SUBST(LIBNOTIFY_LIBS)
        AC_DEFINE(USE_NOTIFY, [1], Build notify plugin)
        HAVE_NOTIFY=yes
    ],
    [
        HAVE_NOTIFY=no
    ]
    )
AM_CONDITIONAL(USE_NOTIFY, test x"$HAVE_NOTIFY" = "xyes")

dnl webkit (LastfmInfo)
webkitgtk_modules="WebKitGtk = 1d"
PKG_CHECK_MODULES(WEBKITGTK, $webkitgtk_modules,
     [
        AC_SUBST(WEBKITGTK_CFLAGS)
        AC_SUBST(WEBKITGTK_LIBS)
        HAVE_WEBKITGTK=yes
    ],
    [
        HAVE_WEBKITGTK=no
    ]
    )
AM_CONDITIONAL(USE_LASTFMINFO, test x"$HAVE_WEBKITGTK" = "xyes")

dnl Keep in alphabetical order
AC_OUTPUT([
debian/changelog
debian/control
debian/eina-dev.install
eina/Makefile
gel/Makefile
lomo/Makefile
Makefile
misc/eina.desktop
misc/eina-0.7.pc
misc/Makefile
pixmaps/Makefile
plugins/adb/Makefile
plugins/coverplus/Makefile
plugins/hooktest/Makefile
plugins/lastfminfo/Makefile
plugins/Makefile
plugins/notify/Makefile
plugins/recently/Makefile
po/Makefile.in
ui/Makefile
])

