#AC_DEFUN([MAJOR], [0])
#AC_DEFUN([MINOR], [7])
#AC_DEFUN([MICRO], [3])
#AC_DEFUN([EINA_VERSION], [MAJOR.MINOR.MICRO])
#AC_INIT([eina], [EINA_VERSION], [xuzo@cuarentaydos.com]
#AC_SUBST(MAJOR)
#AC_SUBST(MINOR)
#AC_SUBST(MICRO)
#AC_SUBST(EINA_VERSION)

AC_INIT([eina], 0.7.3, xuzo@cuarentaydos.com)
AM_INIT_AUTOMAKE([eina], [0.7.3])
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

dnl aclocal flags
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_ISC_POSIX
AC_PROG_CC
AC_HEADER_STDC
AC_PROG_INTLTOOL
AM_PROG_LIBTOOL
AC_CONFIG_MACRO_DIR([m4])

EINA_API_VERSION="0.7"
EINA_VERSION="$EINA_API_VERSION.3"
EINA_VERSION_CODENAME="It's all over but the crying"
AC_SUBST(EINA_VERSION)
AC_SUBST(EINA_VERSION_CODENAME)
AC_SUBST(EINA_API_VERSION)

AC_PATH_PROG(PKG_CONFIG, pkg-config)
GLIB_GENMARSHAL=`$PKG_CONFIG --variable=glib_genmarshal glib-2.0`
AC_SUBST(GLIB_GENMARSHAL)

AC_PATH_PROG(GTK_BUILDER_CONVERT, gtk-builder-convert)
AC_SUBST(GTK_BUILDER_CONVERT)

#*******************************************************************************
# Internationalization
#*******************************************************************************
ALL_LINGUAS="ca es"
GETTEXT_PACKAGE=eina
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])
AM_GLIB_GNU_GETTEXT

# Some flags
TOPAZ_CFLAGS="-DATK_DISABLE_DEPRECATED -DPANGO_DISABLE_DEPRECATED \
	-DG_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED \
	-DGDK_MULTIHEAD_SAFE -DGTK_MULTIHEAD_SAFE"

AC_ARG_ENABLE(release-build, [  --enable-release-build      Build in release mode], release_build=yes, release_build=no)
if test x$release_build = 'xyes'; then
	CXXFLAGS="-O2"
	CFLAGS="-O2"
	BUILD_MODE_CFLAGS="-DG_DISABLE_CAST_CHECKS -O2"
else
	CXXFLAGS="-O0"
	CFLAGS="-O0"
	BUILD_MODE_CFLAGS="-g -O0"
fi

GLIB_VERSION="2.16"
GTK_VERSION="2.12"
GSTREAMER_VERSION="0.10"
pkg_modules="\
	glib-2.0 >= $GLIB_VERSION,      \
	gmodule-2.0 >= $GLIB_VERSION,   \
	gio-2.0 >= $GLIB_VERSION,       \
	gtk+-2.0 >= $GTK_VERSION,       \
	gstreamer-0.10 >= $GSTREAMER_VERSION \
	"
PKG_CHECK_MODULES(PACKAGE, $pkg_modules)
PACKAGE_CFLAGS="\
	$PACKAGE_CFLAGS \
	$TOPAZ_CFLAGS \
	-DGEL_DISABLE_DEPRECATED -DGEL_IO_DISABLE_DEPRECATED -DGEL_UI_DISABLE_DEPRECATED \
	-Wall -Werror -std=c99 $BUILD_MODE_CFLAGS"

AC_PATH_PROG(CURL_CONFIG, curl-config)
CURL_CFLAGS="`$CURL_CONFIG --cflags`"
CURL_LIBS="`$CURL_CONFIG --libs`"

PACKAGE_CFLAGS="$PACKAGE_CFLAGS $CURL_CFLAGS"
PACKAGE_LIBS="$PACKAGE_LIBS $CURL_LIBS"
# PACKAGE_LIBS="--as-needed $PACKAGE_LIBS"

AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)
AC_SUBST(GTK_VERSION)
AC_SUBST(GSTREAMER_VERSION)

PACKAGE_RELEASE_DATE="`date '+%a, %d %b %Y %H:%m:%S %z'`"
AC_SUBST(PACKAGE_RELEASE_DATE)

dnl
dnl Plugins
dnl

dnl ige-mac-integracion aka ige
IGE_VERSION="0.8.0"
ige_modules="ige-mac-integration >= $IGE_VERSION"
PKG_CHECK_MODULES(IGE, $ige_modules,
	[
		HAVE_IGE=yes
		PACKAGE_CFLAGS="$PACKAGE_CFLAGS -DHAVE_IGE=1"
		AC_SUBST(IGE_CFLAGS)
		AC_SUBST(IGE_LIBS)
	],
	[
		PACKAGE_CFLAGS="$PACKAGE_CFLAGS -DHAVE_IGE=0"
		HAVE_IGE=no
	]
	)
AM_CONDITIONAL(USE_IGE, test x"$HAVE_IGE" = "xyes")

dnl dbus-glib
DBUS_GLIB_VERSION="0.76"
unique_modules="dbus-glib-1 >= $DBUS_GLIB_VERSION"
PKG_CHECK_MODULES(DBUS_GLIB, $unique_modules,
	[
		AC_SUBST(DBUS_GLIB_CFLAGS)
		AC_SUBST(DBUS_GLIB_LIBS)
		HAVE_DBUS_GLIB=yes
		PACKAGE_CFLAGS="$PACKAGE_CFLAGS $DBUS_GLIB_CFLAGS -DHAVE_DBUS_GLIB=1"
		PACKAGE_LIBS="$PACKAGE_LIBS $DBUS_GLIB_LIBS"
	],
	[
		PACKAGE_CFLAGS="$PACKAGE_CFLAGS -DHAVE_DBUS_GLIB=0"
		HAVE_DBUS_GLIB=no
	]
	)
AM_CONDITIONAL(USE_DBUS_GLIB, test x"$HAVE_DBUS_GLIB" = "xyes")

dnl unique
UNIQUE_VERSION="1.0"
unique_modules="unique-1.0 >= $UNIQUE_VERSION"
PKG_CHECK_MODULES(UNIQUE, $unique_modules,
	[
		AC_SUBST(UNIQUE_CFLAGS)
		AC_SUBST(UNIQUE_LIBS)
		HAVE_UNIQUE=yes
		PACKAGE_CFLAGS="$PACKAGE_CFLAGS $UNIQUE_CFLAGS -DHAVE_UNIQUE=1"
		PACKAGE_LIBS="$PACKAGE_LIBS $UNIQUE_LIBS"
	],
	[
		PACKAGE_CFLAGS="$PACKAGE_CFLAGS -DHAVE_UNIQUE=0"
		HAVE_UNIQUE=no
	]
	)
AM_CONDITIONAL(USE_UNIQUE, test x"$HAVE_UNIQUE" = "xyes")

dnl sqlite3 (adb)
sqlite3_modules="sqlite3 >= 3.2"
PKG_CHECK_MODULES(SQLITE3, $sqlite3_modules,
	[
		AC_SUBST(SQLITE3_CFLAGS)
		AC_SUBST(SQLITE3_LIBS)
		HAVE_SQLITE3=yes
	],
	[
		AC_CHECK_HEADER(sqlite3.h, [HAVE_SQLITE3=yes], [HAVE_SQLITE3=no])
	]
	)
AM_CONDITIONAL(USE_ADB, test x"$HAVE_SQLITE3" = "xyes")

dnl libnotify (notify) plugin delayed until 0.8.0
dnl libnotify_modules="libnotify >= 0.4.0"
dnl PKG_CHECK_MODULES(LIBNOTIFY, $libnotify_modules,
dnl      [
dnl         AC_SUBST(LIBNOTIFY_CFLAGS)
dnl         AC_SUBST(LIBNOTIFY_LIBS)
dnl         AC_DEFINE(USE_NOTIFY, [1], Build notify plugin)
dnl         HAVE_NOTIFY=yes
dnl     ],
dnl     [
dnl         HAVE_NOTIFY=no
dnl     ]
dnl     )
dnl AM_CONDITIONAL(USE_NOTIFY, test x"$HAVE_NOTIFY" = "xyes")

dnl webkit (LastfmInfo) delayed until 0.8.0
webkitgtk_modules="webkit-1.0 >= 1.0.1"
PKG_CHECK_MODULES(WEBKITGTK, $webkitgtk_modules,
[
	AC_SUBST(WEBKITGTK_CFLAGS)
	AC_SUBST(WEBKITGTK_LIBS)
	HAVE_WEBKITGTK=yes
],
[
	HAVE_WEBKITGTK=no
]
)
AM_CONDITIONAL(USE_LASTFM_WEBVIEW, test x"$HAVE_WEBKITGTK" = "xyes")

dnl Keep in alphabetical order
AC_OUTPUT([
eina/Makefile
gel/Makefile
lomo/Makefile
Makefile
misc/eina.desktop
misc/eina-0.7.pc
misc/Makefile
pixmaps/Makefile
plugins/adb/Makefile
plugins/coverplus/Makefile
plugins/hooktest/Makefile
plugins/lastfm/Makefile
plugins/lyrics/Makefile
plugins/recently2/Makefile
plugins/Makefile
po/Makefile.in
ui/Makefile
])

dnl Buggy plugins
#plugins/lastfminfo/Makefile
#plugins/lastfmcover/Makefile
#plugins/notify/Makefile
#plugins/recently/Makefile

