SUBDIRS = coverplus hooktest lastfm lastfmcover recently
DIST_SUBDIRS = adb coverplus hooktest lastfm lastfmcover lastfminfo notify recently

if USE_ADB
SUBDIRS += adb
endif

#if USE_LASTFMINFO
#SUBDIRS += lastfminfo
#endif

#if USE_NOTIFY
#SUBDIRS += notify
#endif

#DIST_SUBDIRS = \
#	adb \
#	coverplus \
#	hooktest \
#	lastfminfo \
#	notify \
#	recently

#install-data-local:
#	@$(NORMAL_INSTALL)
#	$(mkinstalldirs) $(DESTDIR)$(plugins_data_dir)

